ingress/app1/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app-service
  labels:
    app: fastapi-app
spec:
  type: NodePort
  selector:
    app: fastapi-app
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
